[gd_scene load_steps=10 format=3 uid="uid://yl6w74en5kkn"]

[ext_resource type="Script" path="res://scenes/objects/blast_doors/blast_doors.gd" id="1_okget"]
[ext_resource type="Script" path="res://scenes/objects/blast_doors/movement.gd" id="2_klw27"]
[ext_resource type="Script" path="res://scripts/systems/basic_health.gd" id="3_h7yoj"]
[ext_resource type="Script" path="res://scenes/objects/blast_doors/collision.gd" id="4_fwbli"]
[ext_resource type="Texture2D" uid="uid://djjn82nyijagk" path="res://assets/images/Vine.png" id="5_oxbfq"]

[sub_resource type="GDScript" id="GDScript_isg1n"]
resource_name = "Door_Destroy"
script/source = "extends StaticBody2D


func _notification(_what :int) -> void:
    if _what == NOTIFICATION_PREDELETE:
        AudioManager.play_stream_oneshot(AudioManager.audio_vines_breaking.pick_random())
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxf3h"]
size = Vector2(60, 540)

[sub_resource type="GDScript" id="GDScript_u32u5"]
resource_name = "Door_Destroy"
script/source = "extends StaticBody2D

func _notification(_what :int) -> void:
    if _what == NOTIFICATION_PREDELETE:
        AudioManager.play_stream_oneshot(AudioManager.audio_vines_breaking.pick_random())
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_voge4"]
size = Vector2(60, 540)

[node name="BlastDoors" type="Node2D"]
script = ExtResource("1_okget")

[node name="process" type="Node" parent="."]

[node name="Movement" type="Node" parent="process"]
script = ExtResource("2_klw27")

[node name="Health_Top" type="Node" parent="process" node_paths=PackedStringArray("_owner")]
script = ExtResource("3_h7yoj")
_owner = NodePath("../../view/Door_Top")

[node name="Health_Bottom" type="Node" parent="process" node_paths=PackedStringArray("_owner")]
script = ExtResource("3_h7yoj")
_owner = NodePath("../../view/Door_Bottom")

[node name="Collision" type="Node" parent="process"]
script = ExtResource("4_fwbli")

[node name="view" type="Node2D" parent="."]

[node name="Door_Top" type="StaticBody2D" parent="view"]
script = SubResource("GDScript_isg1n")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="view/Door_Top"]
position = Vector2(0, -270)
shape = SubResource("RectangleShape2D_jxf3h")

[node name="Sprite" type="Sprite2D" parent="view/Door_Top"]
position = Vector2(155, -114.859)
scale = Vector2(0.311198, 0.533507)
texture = ExtResource("5_oxbfq")
offset = Vector2(0, -270)
flip_h = true
flip_v = true

[node name="Area2D" type="Area2D" parent="view/Door_Top" groups=["door"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="view/Door_Top/Area2D"]
position = Vector2(0, -270)
shape = SubResource("RectangleShape2D_jxf3h")

[node name="Door_Bottom" type="StaticBody2D" parent="view"]
script = SubResource("GDScript_u32u5")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="view/Door_Bottom"]
position = Vector2(0, 270)
shape = SubResource("RectangleShape2D_voge4")

[node name="Sprite" type="Sprite2D" parent="view/Door_Bottom"]
position = Vector2(-148, 124.25)
scale = Vector2(0.304948, 0.519444)
texture = ExtResource("5_oxbfq")
offset = Vector2(0, 270)

[node name="Area2D" type="Area2D" parent="view/Door_Bottom" groups=["door"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="view/Door_Bottom/Area2D"]
position = Vector2(0, 270)
shape = SubResource("RectangleShape2D_voge4")

[connection signal="area_entered" from="view/Door_Top/Area2D" to="process/Collision" method="_on_area_2d1_area_entered"]
[connection signal="area_exited" from="view/Door_Top/Area2D" to="process/Collision" method="_on_area_2d1_area_exited"]
[connection signal="area_entered" from="view/Door_Bottom/Area2D" to="process/Collision" method="_on_area_2d2_area_entered"]
[connection signal="area_exited" from="view/Door_Bottom/Area2D" to="process/Collision" method="_on_area_2d2_area_exited"]
